KD-613-2, (squashable) optimizing and author detail fix

--- a/koha-tmpl/intranet-tmpl/prog/css/Labels/labels.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/Labels/labels.css
@@ -58,7 +58,8 @@
     z-index: 10000;
 }
 .controlGroup {
-    margin: 10px;
+    margin: 10px 0;
+    clear:both;
 }
 #sheetEditor {
     position: relative;
@@ -105,9 +106,6 @@
 #elementControls .button, 
 #regionsDispenser .button {
     float:left;
-}
-#regionsDispenser, #regionControls {
-    clear:both;
 }
 #sheetEditorConfig {
   clear:left;
